# trunk

./: README.md
CodeNote/: CMakeLists.txt
CodeNote/include/: CodeNote.h  CodeNoteMainWindow.h
CodeNote/src/: CodeNote.cpp  CodeNoteMainWindow.cpp
PersonalAssistant/: CMakeLists.txt
PersonalAssistant/include/: PersonalAssistant.h  PersonalAssistantAPP.h  occupied.txt
PersonalAssistant/src/: PersonalAssistant.cpp  PersonalAssistantAPP.cpp
